RESOLVED FIXED126872
toStringVector static function definition should not be redundant.
https://bugs.webkit.org/show_bug.cgi?id=126872
Summary toStringVector static function definition should not be redundant.
Piotr Grad
Reported 2014-01-12 22:22:48 PST
toStringVector function was declared twice in InjectedBundle.cpp and WebPageGroup.cpp as sta tic.
Attachments
Patch (7.49 KB, patch)
2014-01-12 22:23 PST, Piotr Grad
andersca: review+
piotr.grad: commit-queue-
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 (896.41 KB, application/zip)
2014-01-12 23:26 PST, Build Bot
no flags
Patch (7.71 KB, patch)
2014-01-15 12:32 PST, Piotr Grad
no flags
Piotr Grad
Comment 1 2014-01-12 22:23:56 PST
Build Bot
Comment 2 2014-01-12 23:26:32 PST
Comment on attachment 221008 [details] Patch Attachment 221008 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6070547846791168 New failing tests: userscripts/user-script-audio-document.html userscripts/user-script-plugin-document.html userscripts/script-not-run-for-fragments.html userscripts/document-element-available-at-start.html plugins/plugin-document-load-prevented-userscript.html userscripts/simple-stylesheet.html userscripts/user-script-all-frames.html userscripts/user-script-top-frame-only.html userscripts/script-run-at-start.html userscripts/script-run-at-end.html userscripts/user-style-top-frame-only.html userscripts/mixed-case-stylesheet.html userscripts/user-script-image-document.html userscripts/user-script-video-document.html userscripts/user-stylesheet-invalidate.html userscripts/user-style-all-frames.html fast/css/user-stylesheet-crash.html
Build Bot
Comment 3 2014-01-12 23:26:33 PST
Created attachment 221011 [details] Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Piotr Grad
Comment 4 2014-01-15 12:32:53 PST
WebKit Commit Bot
Comment 5 2014-01-15 15:22:08 PST
Comment on attachment 221292 [details] Patch Clearing flags on attachment: 221292 Committed r162097: <http://trac.webkit.org/changeset/162097>
WebKit Commit Bot
Comment 6 2014-01-15 15:22:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.