toStringVector static function definition should not be redundant. https://bugs.webkit.org/show_bug.cgi?id=126872.

Patch by Piotr Grad <p.grad@samsung.com> on 2014-01-15
Reviewed by Anders Carlsson.

toStringVector function was declared twice in InjectedBundle.cpp and WebPageGroup.cpp as static.
In order to remove redundant definition this function was moved into API::Array.

* Shared/APIArray.cpp:
(API::Array::toStringVector):
* Shared/APIArray.h:
* UIProcess/WebPageGroup.cpp:
(WebKit::WebPageGroup::addUserStyleSheet):
(WebKit::WebPageGroup::addUserScript):
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::addUserScript):
(WebKit::InjectedBundle::addUserStyleSheet):

Canonical link: https://commits.webkit.org/145072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162097 268f45cc-cd09-0410-ab3c-d52691b4dbfc